--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -18,9 +18,7 @@ jobs:
 
     - name: Build a binary wheel and a source tarball
       run: >-
-        python -m
-        pip install
-        .
+        python setup.py sdist bdist_wheel
 
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
