--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -16,6 +16,10 @@ jobs:
       with:
         python-version: 3.7
 
+    - name: Make sure you have the latest versions of setuptools and wheel installed
+      run: >-
+        python -mpip install --user --upgrade setuptools wheel
+
     - name: Build a binary wheel and a source tarball
       run: >-
         python setup.py sdist bdist_wheel
